# dawdel

./: Cargo.toml  README.md
examples/: 03_notes_and_chords.rs  04_midi_import.rs  test.mid
src/: lib.rs  main.rs
src/audio_engine/: mod.rs
src/engine/: export.rs  mod.rs
src/interface/: effect.rs  mod.rs  note_data.rs  sample.rs  song.rs  track.rs
