[package]
name = "dawdel"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
authors = ["Motivation Software Inc."]
description = "A music generation library for Rust"
repository = "https://github.com/motivation-inc/dawdel"

[dependencies]
hound = "3.5.1"
midly = "0.5.3"
open = "5.3.3"
symphonia = { version = "0.5.5", features = ["all"] }
